@@ -1,3 +1,7 @@
+2012-08-23  Don Porter  <dgp@users.sourceforge.net>
+
+	* unix/tkUnixWm.c: [Bugs 3554026,3561016] Stop crash with tearoff menus.
+
 2012-08-17  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/nmakehlp.c: Add "-V<num>" option, in order to be able
